# FFmpegDemo

./: local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dn_audio_player.c  dn_video_player.c  playvideo.c  video.c  video.h
app/src/main/java/com/ffmpegdemo/: MainActivity.java  VideoUtils.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
